# docs/swagger.json
@@ -1147,7 +1147,7 @@
         },
         "/api/v1/services/{type}": {
             "get": {
-                "description": "delete a meal by providing an Id",
+                "description": "delete a Service by providing an Type",
                 "consumes": [
                     "application/json"
                 ],
@@ -1157,7 +1157,7 @@
                 "tags": [
                     "Services"
                 ],
-                "summary": "Delete a meal",
+                "summary": "Get Service By Type",
                 "parameters": [
                     {
                         "type": "string",
@@ -1169,8 +1169,8 @@
                     },
                     {
                         "type": "string",
-                        "description": "provide meal Id",
-                        "name": "mealId",
+                        "description": "provide service type",
+                        "name": "type",
                         "in": "path",
                         "required": true
                     }
